# zenn-cloudfront-resize-image

./: README.md  pyproject.toml
infrastructure/: .editorconfig  package-lock.json  package.json
infrastructure/lib/: CloudFrontAssetsStack.ts  LambdaEdgeStack.ts  XRegionParam.ts  common.ts  index.ts  params.example.ts
infrastructure/lib/lambda/image_resize_node/: .gitignore  origin_response.js  package.json  utils.js  viewer_request.js
infrastructure/lib/lambda/image_resize_python/origin_response/: handler.py
infrastructure/lib/lambda/image_resize_python/viewer_request/: handler.py
